# haskell-tree-sitter

./: .gitmodules
tree-sitter/: ChangeLog.md  README.md  tree-sitter.cabal
tree-sitter-html/: tree-sitter-html.cabal
tree-sitter-html/TreeSitter/: Html.hs
tree-sitter-javascript/: tree-sitter-javascript.cabal
tree-sitter-javascript/TreeSitter/: JavaScript.hs
tree-sitter/src/: .clang-format  bridge.c
tree-sitter/src/TreeSitter/: Cursor.hs  Language.hs  Node.hs  Parser.hs  Query.hs  Symbol.hs  Tree.hs
tree-sitter/test/: Test.hs
tree-sitter/test/TreeSitter/: Example.hs
tree-sitter/test/TreeSitter/Strings/: Example.hs
